parseBday from VK